# object_store_rs

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml
.circleci/: config.yml
src/: aws.rs  awssdk.rs  azure.rs  azure_adls2.rs  gcp.rs  lib.rs  local.rs  memory.rs  multipart.rs  oauth.rs  throttle.rs  util.rs
src/path/: mod.rs  parts.rs
testdata/simple/loremipsum/: loremipsum-5.txt
