[package]
name = "object_store"
version = "0.3.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "A generic object store interface"
keywords = ["object", "storage", "cloud"]

[package.metadata.docs.rs]
all-features = true

[dependencies] # In alphabetical order
async-trait = "0.1.53"
# Microsoft Azure Blob storage integration
azure_core = { git = "https://github.com/roeap/azure-sdk-for-rust/", rev = "00d85478311685396ae94601b28f83320d016e86", optional = true, default-features = false, features = [
    "enable_reqwest_rustls",
] }
azure_storage = { git = "https://github.com/roeap/azure-sdk-for-rust/", rev = "00d85478311685396ae94601b28f83320d016e86", optional = true, default-features = false, features = [
    "account",
] }
azure_storage_blobs = { git = "https://github.com/roeap/azure-sdk-for-rust/", rev = "00d85478311685396ae94601b28f83320d016e86", optional = true, default-features = false, features = [
    "enable_reqwest_rustls",
] }
bytes = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# Google Cloud Storage integration
cloud-storage = { version = "0.11.1", optional = true, default-features = false, features = [
    "rustls-tls",
] }
futures = "0.3"
# for rusoto
hyper = { version = "0.14", optional = true, default-features = false }
# for rusoto
hyper-rustls = { version = "0.23.0", optional = true, default-features = false, features = [
    "webpki-tokio",
    "http1",
    "http2",
    "tls12",
] }
itertools = "0.10.1"
percent-encoding = "2.1"
# rusoto crates are for Amazon S3 integration
rusoto_core = { version = "0.48.0", optional = true, default-features = false, features = [
    "rustls",
] }
rusoto_credential = { version = "0.48.0", optional = true, default-features = false }
rusoto_s3 = { version = "0.48.0", optional = true, default-features = false, features = [
    "rustls",
] }
snafu = "0.7"
tokio = { version = "1.18", features = [
    "sync",
    "macros",
    "parking_lot",
    "rt-multi-thread",
    "time",
] }
tracing = { version = "0.1" }
reqwest = { version = "0.11", optional = true, default-features = false, features = [
    "rustls-tls",
] }
# Filesystem integration
url = "2.2"
walkdir = "2"

[features]
azure = ["azure_core", "azure_storage_blobs", "azure_storage", "reqwest"]
azure_test = [
    "azure",
    "azure_core/azurite_workaround",
    "azure_storage/azurite_workaround",
    "azure_storage_blobs/azurite_workaround",
]
gcp = ["cloud-storage"]
aws = ["rusoto_core", "rusoto_credential", "rusoto_s3", "hyper", "hyper-rustls"]

[dev-dependencies] # In alphabetical order
dotenv = "0.15.0"
tempfile = "3.1.0"
futures-test = "0.3"
